artio fix llexsim is working but demo client is not